# bluepill-can-bl

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  west.yml
.github/workflows/: build.yml  zephyr_sysbuild.yml
app/: CMakeLists.txt  prj.conf  sysbuild.conf
app/boards/: stm32_min_dev@blue.overlay
app/src/: main.cpp
bluepill-can-bl/: CMakeLists.txt  board.hpp  boot.cpp  main.cpp
bluepill-can-bl/arm/: startup_cm3.s  systick.hpp
bluepill-can-bl/interface/can/: frame.hpp
bluepill-can-bl/interface/can_bl/: boot.hpp  transport.hpp
bluepill-can-bl/stm32f1/: bkp.hpp  can.hpp  flash.hpp  gpio.hpp  linker.ld  pwr.hpp  rcc.hpp
cmake/: gcc-arm-none-eabi.cmake
zephyr/: Kconfig  bluepill_partitions.overlay  module.yml
zephyr/sysbuild/: CMakeLists.txt  Kconfig
